Added code to include google translator.

--- a/client/app/styles/site_common.css
+++ b/client/app/styles/site_common.css
@@ -199,7 +199,8 @@ select {
     font-size: 18px;
 }
 .goog-te-gadget {
-    margin-top: 3px;
+    margin-top: 3.5px;
+    margin-right: 3px;
 }
 
 
