Show discount percantage for VIP purchase. Fixed some translation errors.

--- a/client/app/styles/site_common.css
+++ b/client/app/styles/site_common.css
@@ -240,6 +240,11 @@ select {
     line-height: 125%; /* adds spacing between the lines of text */
 }
 
+.cl-text-6pt-format {
+    font-size: 6pt;
+    line-height: 125%; /* adds spacing between the lines of text */
+}
+
 .cl-vertical-align-middle {
     vertical-align: middle;
 }
